# latin_ner_finetuning

./: .gitattributes  .gitignore  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
containers/: compare.def  finetune.def
docs/: latincy_comparison.md
eval/: latin_ner_eval.json  latin_ner_eval.md
jobs/: build_compare_container.sh  build_container.sh  compare_latincy.sh  evaluate.sh  finetune.sh  gate_check.sh  prepare_data.sh  smoke.sh
src/latin_ner/: align.py  compare.py  conll.py  data.py  evaluate.py  gate_check.py  labels.py  offsets.py  spans.py  train.py
tests/: test_align.py  test_compare.py  test_conll.py  test_data.py  test_evaluate.py  test_labels.py  test_offsets.py  test_spans.py  test_train.py
