[project]
name = "classical-latin-ner"
version = "0.1.0"
description = "Fine-tune LatinBERT for classical-Latin NER (PRS/GEO/GRP). Standalone repo; checkpoint inherits AGPL-3.0 from the Herodotos training data."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Federico Dipasqua" }]

# Runtime deps. NOTE: on the cluster, `torch` is provided by the
# pytorch/pytorch CUDA base image (see containers/finetune.def) — it is NOT
# pinned here so pip never clobbers the GPU build with a CPU wheel.
# Versions below are web-verified (mid-2026) and cross-checked against:
#   - latincy/latin-bert uv.lock (transformers 5.3.0 / torch 2.10 tested)
#   - cluster embed.sif (transformers 5.8.1, proven to run here)
dependencies = [
    "transformers==5.8.1",
    "datasets>=3.0,<6",
    "seqeval==1.2.2",
    "accelerate>=1.0",
    "numpy<3",
]

[project.optional-dependencies]
# Local dev / CI for the pure helpers (no torch needed).
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Convenience extra to also pull a (CPU) torch locally if you want to smoke-test
# the model-loading path off-cluster. On the cluster, omit this.
torch = ["torch>=2.6,<2.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latin_ner"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=latin_ner --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["src/latin_ner"]
strict = true
# Heavy ML libs ship partial/no stubs; don't fail the type-check on them.
[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "datasets",
    "datasets.*",
    "seqeval",
    "seqeval.*",
    "numpy",
    "numpy.*",
    "spacy",
    "spacy.*",
]
ignore_missing_imports = true
